@@ -3,8 +3,8 @@
 #empty_field	(empty)
 #unset_field	-
 #path	weird
-#open	2019-06-07-01-59-20
+#open	2019-08-21-02-16-33
 #fields	ts	uid	id.orig_h	id.orig_p	id.resp_h	id.resp_p	name	addl	notice	peer
 #types	time	string	addr	port	addr	port	string	string	bool	string
-1333663011.602839	-	-	-	-	-	unknown_protocol	-	F	zeek
-#close	2019-06-07-01-59-20
+1333663011.602839	-	-	-	-	-	unknown_protocol	135	F	zeek
+#close	2019-08-21-02-16-33
